search and results functions working

--- a/addBook.html
+++ b/addBook.html
@@ -3,26 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Tome Raider Add</title>
+  <title>Google Books Search</title>
   <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
-    type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-  <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
-  <link href="css/book_exchange.css" rel="stylesheet">
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
 
 </head>
 
@@ -67,7 +51,7 @@
               <!-- ISBN -->
               <!-- glyphicon-question-sign needs work -->
               <div class="form-group">
-                <label for="author">ISBN <span class="glyphicon glyphicon-search" aria-hidden="true"></span> </label>
+                <label for="isbn">ISBN <span class="glyphicon glyphicon-search" aria-hidden="true"></span> </label>
                 <input type="text" class="form-control" id="isbn">
               </div>
 
